--- a/player.css
+++ b/player.css
@@ -40,8 +40,7 @@ body {
 }
 
 .player {
-  /* background-image: url("assets/background.png"); */
-  background-color: #23160f;
+  background-image: url("assets/background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -59,16 +58,15 @@ body {
   display: none;
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
-  /* position: absolute; */
-  /* bottom: 50%;
-  left: 50%; */
-  /* background-image: url("assets/logo.png"); */
-  background-image: url("assets/full_logo_tiny.png");
-  /* margin-bottom: -96px;
-  margin-left: -96px; */
-  width: 100%;
-  height: 100%;
+  background-position: bottom;
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  background-image: url("assets/logo.png");
+  margin-bottom: -96px;
+  margin-left: -96px;
+  width: 192px;
+  height: 192px;
 }
 
 .player .placeholder-image {
@@ -111,7 +109,6 @@ body {
   min-width: 96px;
   max-width: 266px;
   width: 100%;
-  margin: 0px auto;
 }
 
 .player .media-text {
@@ -164,7 +161,7 @@ body {
 .player .overlay {
   position: absolute;
   left: 64px;
-  bottom: 27px;
+  bottom: 64px;
   right: 64px;
   display: none;
   top: auto;
@@ -172,19 +169,14 @@ body {
 
 .player .watermark {
   position: absolute;
-  /* top: 64px;
+  top: 64px;
   left: 64px;
   bottom: 64px;
-  right: 64px; */
-  height: 100%;
-  width: 100%;
-  margin:  0px;
-  bottom: 5px;
-  right: 22px;
+  right: 64px;
   display: none;
   background-position: bottom right;
   background-repeat: no-repeat;
-  /* margin-bottom: 54px; */
+  margin-bottom: 54px;
   background-image: url("assets/watermark.png");
 }
 
@@ -200,18 +192,7 @@ body {
 }
 
 .player .progressBar {
-  /* background-color: rgb(250, 178, 49); */
-  background-color: #23160f;
-}
-
-.player .controls-progress-wrapper{
-    position: relative;
-    overflow: hidden;
-    width: 80%;
-}
-
-.player[type="audio"][state="paused"] .controls-progress-wrapper{
-    width: 75%;
+  background-color: rgb(250, 178, 49);
 }
 
 .player .controls-progress {
@@ -221,8 +202,6 @@ body {
   margin-bottom: 11px;
   overflow: hidden;
   position: relative;
-  width: 100%;
-  background: #fff;
 }
 
 .player .controls-progress-inner {
@@ -232,22 +211,15 @@ body {
 
 .player .controls-progress-thumb {
   height: 100%;
-  width: auto;
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  background: transparent;
+  width: 3px;
+  background-color: rgba(255, 255, 255, 0.5);
   position: absolute;
   top: 0;
-  margin-left: -7px;
-  /* background-image: url('assets/handle.png'); */
-}
-
-.player img.controls-progress-thumb{
-    display: block;
+  margin-left: -3px;
 }
 
 .player .controls-cur-time,
-.player .controls-total-time,
-.player .controls-time-seperator {
+.player .controls-total-time {
   color: rgba(255, 255, 255, 0.8);
   font-size: 16px;
   font-weight: 400;
@@ -256,20 +228,14 @@ body {
 .player .controls-cur-time {
   float: left;
   line-height: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.player .controls-time-seperator{
-    float: left;
-    line-height: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .player .controls-total-time {
-  float: left;
+  float: right;
   line-height: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 15px;
 }
 
 .player .preview-mode-info {
@@ -376,16 +342,8 @@ body {
   display: block;
 }
 
-.player[type="video"][state="loading"] .overlay,
-.player[type="video"][state="loading"] .controls,
-.player[type="audio"][state="loading"] .overlay,
-.player[type="audio"][state="loading"] .controls{
-    display: none;
-}
-
 .player[type="video"][state="loading"] .controls-cur-time,
 .player[type="video"][state="loading"] .controls-total-time,
-.player[type="video"][state="loading"] .controls-time-seperator,
 .player[type="video"][state="loading"] .controls-progress-thumb,
 .player[type="video"][state="loading"] .controls-play-pause {
   display: none;
@@ -426,7 +384,6 @@ body {
 
 .player[type="video"][state="buffering"][live="true"] .controls-cur-time,
 .player[type="video"][state="buffering"][live="true"] .controls-total-time,
-.player[type="video"][state="buffering"][live="true"] .controls-time-seperator,
 .player[type="video"][state="buffering"][live="true"] .controls-progress {
   display: none !important;
 }
@@ -438,7 +395,6 @@ body {
 .player[type="video"][state="buffering"] .media-info,
 .player[type="video"][state="buffering"]:not(.seeking) .controls-cur-time,
 .player[type="video"][state="buffering"]:not(.seeking) .controls-total-time,
-.player[type="video"][state="buffering"]:not(.seeking) .controls-time-seperator,
 .player[type="video"][state="buffering"]:not(.seeking) .controls-progress {
   display: none;
 }
@@ -466,14 +422,12 @@ body {
 .player[type="video"][state="paused"] .watermark,
 .player[type="video"][state="paused"]:not(.seeking) .controls-cur-time,
 .player[type="video"][state="paused"]:not(.seeking) .controls-total-time,
-.player[type="video"][state="paused"]:not(.seeking) .controls-time-seperator,
 .player[type="video"][state="paused"]:not(.seeking) .controls-progress {
   display: block;
 }
 
 .player[type="video"][state="paused"][live="true"] .controls-cur-time,
 .player[type="video"][state="paused"][live="true"] .controls-total-time,
-.player[type="video"][state="paused"][live="true"] .controls-time-seperator,
 .player[type="video"][state="paused"][live="true"] .controls-progress {
   display: none !important;
 }
@@ -484,7 +438,6 @@ body {
 
 .player[type="video"][state="paused"]:not(.seeking) .controls-cur-time,
 .player[type="video"][state="paused"]:not(.seeking) .controls-total-time,
-.player[type="video"][state="paused"]:not(.seeking) .controls-time-seperator,
 .player[type="video"][state="paused"]:not(.seeking) .controls-progress {
   opacity: 1;
   -webkit-transition: opacity 1s linear 5s;
@@ -544,7 +497,6 @@ body {
 
 .player[type="video"][state="playing"][live="true"] .controls-cur-time,
 .player[type="video"][state="playing"][live="true"] .controls-total-time,
-.player[type="video"][state="playing"][live="true"] .controls-time-seperator,
 .player[type="video"][state="playing"][live="true"] .controls-progress {
   display: none !important;
 }
@@ -579,11 +531,6 @@ body {
 .player[type="audio"] .media-title {
   font-size: 22px;
   font-weight: 400;
-  width: 100%;
-}
-
-.player[type="audio"] .media-subtitle {
-    width: 100%;
 }
 
 .player[type="audio"] .media-artwork {
@@ -618,22 +565,17 @@ body {
 /* Player - Audio - Loading/Paused                   */
 /* ------------------------------------------------- */
 
+.player[type="audio"][state="loading"] .overlay,
 .player[type="audio"][state="paused"] .overlay {
   display: block;
-  /* margin: 0 !important; */
-  margin: 0 25% 15% 25%;
-}
-
-.player[type="audio"][state="loading"] .overlay{
-    display: none;
+  margin: 0 !important;
 }
 
 .player[type="audio"][state="loading"] .watermark,
-.player[type="audio"][state="paused"] .watermark,
-.player[type="audio"][state="playing"] .watermark{
+.player[type="audio"][state="paused"] .watermark {
   display: block;
   margin: 0 !important;
-  margin-bottom: 5px !important;
+  margin-bottom: 54px !important;
 }
 
 .player[type="audio"][state="loading"] .gradient,
@@ -652,14 +594,12 @@ body {
 }
 
 .player[type="audio"][state="loading"] .controls-cur-time,
-.player[type="audio"][state="loading"] .controls-total-time 
-.player[type="audio"][state="loading"] .controls-time-seperator{
+.player[type="audio"][state="loading"] .controls-total-time {
   display: none !important;
 }
 
 .player[type="audio"][state="paused"]:not(.seeking) .controls-cur-time,
-.player[type="audio"][state="paused"]:not(.seeking) .controls-total-time,
-.player[type="audio"][state="paused"]:not(.seeking) .controls-time-seperator {
+.player[type="audio"][state="paused"]:not(.seeking) .controls-total-time {
   display: block;
 }
 
@@ -673,144 +613,83 @@ body {
 .player[type="audio"][state="loading"][live="true"] .controls-cur-time,
 .player[type="audio"][state="paused"][live="true"] .controls-cur-time,
 .player[type="audio"][state="loading"][live="true"] .controls-total-time,
-.player[type="audio"][state="loading"][live="true"] .controls-time-seperator,
 .player[type="audio"][state="paused"][live="true"] .controls-total-time,
-.player[type="audio"][state="paused"][live="true"] .controls-time-seperator,
 .player[type="audio"][state="loading"][live="true"] .controls-progress,
 .player[type="audio"][state="paused"][live="true"] .controls-progress {
   display: none !important;
 }
-
-/* .player[type="audio"][live="true"] .controls-cur-time,
-.player[type="audio"][live="true"] .controls-total-time,
-.player[type="audio"][live="true"] .controls-time-seperator,
-.player[type="audio"][live="true"] .controls-progress {
-  display: none !important;
-} */
-
-/* .player[type="audio"][state="paused"][live="true"] .controls-play-pause{
-    margin: -4px 50%;
-} */
 
 .player[type="audio"][state="loading"] .controls-progress-inner {
   width: 90% !important;
   -webkit-animation: loading 2s infinite linear;
 }
 
-/*.player[type="audio"][state="loading"] .media-artwork,
+.player[type="audio"][state="loading"] .media-artwork,
 .player[type="audio"][state="paused"] .media-artwork {
   position: absolute;
   left: 384px;
   top: -450px;
-}*/
+}
 
 /* ------------------------------------------------- */
 /* Player - Audio - Buffering/Playing                */
 /* ------------------------------------------------- */
 
 .player[type="audio"][state="buffering"] .overlay,
-.player[type="audio"][state="playing"] .overlay,
-.player[type="audio"][state="paused"] .overlay{
+.player[type="audio"][state="playing"] .overlay {
   display: block;
 }
 
 .player[type="audio"][state="buffering"] .media-info,
-.player[type="audio"][state="playing"] .media-info,
-.player[type="audio"][state="paused"] .media-info {
+.player[type="audio"][state="playing"] .media-info {
   display: block;
   padding-bottom: 0;
 }
 
 .player[type="audio"][state="buffering"] .media-text,
-.player[type="audio"][state="playing"] .media-text,
-.player[type="audio"][state="paused"] .media-text{
+.player[type="audio"][state="playing"] .media-text {
   float: left;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  text-align: center;
-  position: absolute;
-  top: 110%;
+  margin-top: 19px;
 }
 
 .player[type="audio"][state="buffering"] .controls,
-.player[type="audio"][state="playing"] .controls,
-.player[type="audio"][state="paused"] .controls {
-  height: auto;
+.player[type="audio"][state="playing"] .controls {
+  height: 4px;
   position: absolute;
-  width: 100%;
+  width: 384px;
   bottom: auto;
   left: auto;
   right: auto;
   top: auto;
   display: block;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .player[type="audio"][state="buffering"] .controls-progress,
-.player[type="audio"][state="playing"] .controls-progress,
-.player[type="audio"][state="paused"] .controls-progress{
-  height: 8px;
-  margin-top: 11px;
-  margin-bottom: 11px;
+.player[type="audio"][state="playing"] .controls-progress {
+  height: 4px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .player[type="audio"][state="buffering"] .controls-cur-time,
 .player[type="audio"][state="buffering"] .controls-total-time,
-.player[type="audio"][state="buffering"] .controls-time-seperator,
 .player[type="audio"][state="buffering"] .controls-play-pause,
 .player[type="audio"][state="playing"] .controls-cur-time,
 .player[type="audio"][state="playing"] .controls-total-time,
-.player[type="audio"][state="playing"] .controls-time-seperator,
 .player[type="audio"][state="playing"] .controls-play-pause {
   display: none;
 }
 
-.player[type="audio"][state="playing"] .controls-time-seperator,
-.player[type="audio"][state="paused"] .controls-time-seperator{
-    display: block;
-}
-
-.player[type="audio"][state="playing"] .controls-cur-time,
-.player[type="audio"][state="playing"] .controls-total-time,
-.player[type="audio"][state="paused"] .controls-cur-time,
-.player[type="audio"][state="paused"] .controls-total-time{
-    display: block;
-    font-size: 11px;
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-.player[type="audio"] .controls-cur-time{
-    margin-left: 10px;
-}
-
-.player[type="audio"] .controls-total-time{
-    margin-right: 10px;
-}
-
-/* .player[type="audio"][state="buffering"] .watermark,
+.player[type="audio"][state="buffering"] .watermark,
 .player[type="audio"][state="playing"] .watermark {
   display: none;
   margin-bottom: 0;
-} */
+}
 
 .player[type="audio"][state="buffering"] .overlay,
 .player[type="audio"][state="playing"] .overlay {
-  /* margin-left: 384px;
-  margin-bottom: 116px; */
-  margin: 0% 25% 15% 25%;
-}
-
-.player[sub-type="radio"] .controls-cur-time,
-.player[sub-type="radio"] .controls-time-seperator,
-.player[sub-type="radio"] .controls-total-time, 
-.player[sub-type="radio"] .controls-progress-wrapper{
-    display: none !important;
-}
-
-.player[sub-type="radio"] .controls-play-pause{
-    margin: -4px 50%;
+  margin-left: 384px;
+  margin-bottom: 116px;
 }
 
 /* ------------------------------------------------- */
@@ -840,34 +719,3 @@ body {
 .player[state="done"] {
   background-image: url('assets/done.png');
 }
-
-.background {
-  /* background: center no-repeat url(background.png); */
-    background: #23160f;
-}
-
-/* .player .logo {
-    background-image: url(./assets/full_logo_tiny.png);
-    background-size: contain;
-} */
-
-/* .progressBar {
-  background-color: rgb(238, 255, 65);
-  background-color: #23160f;
-    background-color: blue;
-} */
-
-/* .gcpa[type="video"] .gcpm{
-    background-color: #fff;
-    width: 90%;
-} */
-
-.splash {
-  background-image: url(./assets/full_logo.png);
-  background-size: contain;
-}
-
-/* .watermark {
-    background-image: url(./assets/watermark.png);
-    background-size: 7%;
-} */
