css changes for background images

--- a/player.css
+++ b/player.css
@@ -38,6 +38,9 @@
 body {
   background-color: #39162e;
   background: url('./assets/splash_Screen.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .player {
