--- a/player.css
+++ b/player.css
@@ -40,7 +40,6 @@ body {
   background: url('./assets/splash_Screen.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
 }
 
 .player {
@@ -66,7 +65,7 @@ body {
   position: absolute;
   bottom: 50%;
   left: 50%;
-  background-image: url("assets/logo.png");
+  /*background-image: url("assets/logo.png");*/
   margin-bottom: -96px;
   margin-left: -96px;
   width: 192px;
