splash screen changed

--- a/player.css
+++ b/player.css
@@ -37,7 +37,7 @@
 
 body {
   background-color: #39162e;
-  background: url('./assets/splash_Screen.png');
+  background: url('./assets/splash_screen.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
